# website

./: .gitignore
client/: Cargo.toml  package.json  webpack.config.js
client/src/: js.rs  lib.rs
client/src/components/: body.rs  mod.rs
client/src/components/bootstrap/: grid.rs  mod.rs  progress.rs
client/src/components/bootstrap/navbar/: brand.rs  collapse.rs  mod.rs  nav.rs
client/src/components/bootstrap/styles/: bg.rs
client/src/components/views/: main.rs  mod.rs
client/src/geometry/: mod.rs  two_d.rs
client/src/views/: about.rs  index.rs  mod.rs  portfolio.rs
client/src/views/portfolio/: doom_fire.rs
client/wasm/: Cargo.toml
client/wasm/src/: lib.rs
client/wasm/src/geometry/: bindings.rs  mod.rs
client/www/: App.tsx  bootstrap.js  index.html  index.tsx  worker.js
client/www/styles/: _bootstrap.scss  main.scss  pane.scss  variables.scss
client/www/styles/bootstrap/: _variables.scss
client/www/styles/bootstrap-4.5.0/scss/: bootstrap.scss
client/www/styles/bootstrap_3/: _variables.scss
server/: Cargo.toml
server/src/: main.rs
