[package]
name = "nova-client"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
cfg-if = "0.1.10"
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
yew = { git = "https://github.com/yewstack/yew" }
yewtil = { git = "https://github.com/yewstack/yew" }
float-ord = "0.2.0"

[features]
default = ["wee_alloc"]

[profile.release]
lto = true
opt-level = "z"
