[package]
name = "nova-client"
version = "0.1.0"
authors = ["novacrazy <novacrazy@gmail.com>"]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
cfg-if = "0.1.10"
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0", features = ["derive"] }
yew = { git = "https://github.com/yewstack/yew" }
yewtil = { git = "https://github.com/yewstack/yew" }
yew-router = { git = "https://github.com/yewstack/yew" }
float-ord = "0.2.0"
wasm-logger = "0.2.0"
log = "0.4.8"
rand = "0.7.3"
rand_xoshiro = "0.4.0"
js-sys = "0.3.40"

[dependencies.web-sys]
version = "0.3.40"
features = [
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "DomRect",
    "Element"
]

[features]
default = ["wee_alloc"]

[workspace]
members = [
    "./",
    "bin/*"
]

[profile.release]
lto = true
opt-level = "z"